feat!: v0.0.1
commit 474b71bf4c943be77cdd38b6181edb05889d54c7
Author: Seniru <senirupasan@gmail.com>
Date:   Mon Dec 8 21:32:45 2025 +0530

    chore: create a separate output directory to make vercel happy

commit e9ba67081fadbb972f71fd3c06ed4709ff24272f
Author: Seniru <senirupasan@gmail.com>
Date:   Mon Dec 8 21:16:49 2025 +0530

    chore: minor changes to support vercel

commit 0c7a9a71debebe2f6f17625e058ba24a484d6d93
Author: Seniru <senirupasan@gmail.com>
Date:   Mon Dec 8 20:29:12 2025 +0530

    chore: install swag latest on docs build

commit 2187fe6711eebb926c1a8bee916a30fbf260ee98
Author: Seniru <senirupasan@gmail.com>
Date:   Mon Dec 8 19:27:48 2025 +0530

    feat: signup frontend

commit 465e9f52d8a4d33e8866783c5718c3221240f3a0
Author: Seniru <senirupasan@gmail.com>
Date:   Mon Dec 8 19:27:36 2025 +0530

    fix: panic when token is not present in middleware

commit 551f437cbbab460b4b63b9e5c927fb6e58d71a52
Author: Seniru <senirupasan@gmail.com>
Date:   Mon Dec 8 00:37:28 2025 +0530

    feat: token refresh

commit 675d7ee1e0de2b7290d93b3eb38cbfb52f2bbe24
Author: Seniru <senirupasan@gmail.com>
Date:   Sun Dec 7 22:25:08 2025 +0530

    feat: add/remove user role routes

    - POST /api/users/{id}/roles
    - DELETE /api/users/{id}/roles{role}

commit f447a473127895be77ba9bf7bd8736ef434d98a3
Author: Seniru <senirupasan@gmail.com>
Date:   Sat Dec 6 01:43:05 2025 +0530

    feat: user ctx + roles middleware, and roles routes

commit b026b8d6dfd369fb82a166bbb4b2e48366d80eaf
Author: Seniru <senirupasan@gmail.com>
Date:   Fri Dec 5 20:42:12 2025 +0530

    feat: auth handleer middleware

commit 8c196af3e0fb7ac4602e74f96947c777182782c0
Author: Seniru <senirupasan@gmail.com>
Date:   Thu Dec 4 23:48:51 2025 +0530

    feat: login

commit d1bd4437e8b02309f451a7e7e0a6efe1b967292a
Author: Seniru <senirupasan@gmail.com>
Date:   Thu Dec 4 21:36:18 2025 +0530

    fix: docs route

commit 0ec7025f6c8ab1cce239b91a1eb11f1e50eb1f82
Author: Seniru <senirupasan@gmail.com>
Da
