# app/router/auth.go
@@ -3,7 +3,8 @@ package router
 import (
 	"github.com/go-chi/chi/v5"
 
-	authHandlers "github.com/sliitmozilla/auth/app/handlers"
+	authHandlers "github.com/sliitmozilla/accounts/app/handlers"
+	"github.com/sliitmozilla/accounts/app/middlewares"
 )
 
 type AuthRoutes struct{}
@@ -12,9 +13,14 @@ func (b AuthRoutes) Routes() chi.Router {
 
 	r := chi.NewRouter()
 
-	r.Route("/", func(testRoutes chi.Router) {
-		testRoutes.Post("/login", authHandlers.Login)
-		testRoutes.Post("/logout", authHandlers.Logout)
+	r.Route("/", func(authRoutes chi.Router) {
+		authRoutes.Get("/authorize", authHandlers.Authorize)
+		authRoutes.With(middlewares.AuthHandler).Get("/session", authHandlers.GetSession)
+		authRoutes.Post("/login", authHandlers.Login)
+		authRoutes.Post("/logout", authHandlers.Logout)
+		authRoutes.Route("/token", func(authTokenRoutes chi.Router) {
+			authTokenRoutes.Post("/refresh", authHandlers.RefreshToken)
+		})
 	})
 
 	return r
